Fix padding on mobile

--- a/public/stylesheets/global.css
+++ b/public/stylesheets/global.css
@@ -18,16 +18,10 @@ table {
 @media (max-width: 700px) {
     .footer {
         visibility: visible;
-        padding-bottom: 30px;
         border-top: 0.5px solid rgba(255, 255, 255, 0.454)
     }
-    /* for iphone */
-    header{
-        padding-top: constant(safe-area-inset-top);
-        padding-top: 44px;
-    }
     .header-icon{
-        visibility: hidden;
+        display: none !important;
     }
 }
 
